# Rshell

./: .gitignore  CMakeLists.txt  README.md  names.txt
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  multiple_commands_tests.sh  single_command_tests.sh
prototypes/: main.cpp  parse.hpp
src/: Base.cpp  Command.cpp  Connector.cpp  Src.hpp  main.cpp
